# Bunq_Hackathon

./: .env.example  .gitignore  CLAUDE.md  IDEA.md  README.md  audit_log.jsonl  claude_code_prompt.md  demo.html  getting_started.md  prep_plan.md  pyproject.toml  run.sh  sandbox_info.json  sandbox_state.json
.github/workflows/: deploy-pages.yml
backend/: __init__.py
backend/shoe_watch/: __init__.py  models.py  purchase.py  scheduler.py  scraper.py  store.py
client/: package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css
client/src/components/: AccountPanel.tsx  Avatar.tsx  ChatPanel.tsx  ConversationView.tsx  ReceiptPanel.tsx  VoicePanel.tsx
fixtures/: transactions.json
scripts/: reset_demo.py  seed_sandbox.py
src/: __init__.py  app.py  config.py
src/agent/: __init__.py  handlers.py  loop.py  prompts.py  tools.py
src/speech/: __init__.py  asr.py  tts.py
src/vision/: __init__.py  fraud_analyzer.py  receipt_parser.py
tests/: test_agent.py
web/: index.html
